samples/_failures_safe/1761707426_fc5c1a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d2ffb6c5.c: In function ‘tokenize’:
./samples/SAFE/__tmp_d2ffb6c5.c:152:35: error: expected ‘]’ at end of input
  152 |                 tokens[token_count
      |                                   ^
      |                                   ]
./samples/SAFE/__tmp_d2ffb6c5.c:152:17: error: expected declaration or statement at end of input
  152 |                 tokens[token_count
      |                 ^~~~~~
./samples/SAFE/__tmp_d2ffb6c5.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d2ffb6c5.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d2ffb6c5.c:152:17: error: expected declaration or statement at end of input
